web-infras/parser/tests/fixtures/babel/es2015/uncategorised/290/output.txt
[SyntaxError]: Invalid hexadecimal escape sequence. (1,22)
1|"use strict"; `${test}\02`;
 |                    ^
